// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressableButton Basic title button works 1`] = `
<button
  className="button"
  data-label="button"
  onClick={[Function]}
>
  <span>
    nothing
  </span>
</button>
`;

exports[`ProgressableButton Disabled manually set overrides whether we disable on progress when NOT in progress 1`] = `
<ProgressableButton
  data-label="button"
  disableOnProgress={true}
  disabled={true}
  inProgress={false}
  onClick={[Function]}
  title="nothing"
  titleOnProgress="onProgress"
>
  <button
    className="button"
    data-label="button"
    disabled={true}
    onClick={[Function]}
  >
    <span>
      nothing
    </span>
  </button>
</ProgressableButton>
`;

exports[`ProgressableButton Disabled manually set overrides whether we disable on progress when in progress 1`] = `
<ProgressableButton
  data-label="button"
  disableOnProgress={false}
  disabled={true}
  inProgress={true}
  onClick={[Function]}
  title="nothing"
  titleOnProgress="onProgress"
>
  <button
    className="button"
    data-label="button"
    disabled={true}
    onClick={[Function]}
  >
    <span>
      <i
        className="fa fa-spin fa-spinner"
      />
      onProgress
    </span>
  </button>
</ProgressableButton>
`;

exports[`ProgressableButton Progress means we change the title, disable and do turn on spinner 1`] = `
<ProgressableButton
  data-label="button"
  disableOnProgress={true}
  inProgress={true}
  onClick={[Function]}
  title="nothing"
  titleOnProgress="onProgress"
>
  <button
    className="button"
    data-label="button"
    disabled={true}
    onClick={[Function]}
  >
    <span>
      <i
        className="fa fa-spin fa-spinner"
      />
      onProgress
    </span>
  </button>
</ProgressableButton>
`;

exports[`ProgressableButton Progress means we change the title, dont disable and do turn on spinner 1`] = `
<ProgressableButton
  data-label="button"
  disableOnProgress={false}
  inProgress={true}
  onClick={[Function]}
  title="nothing"
  titleOnProgress="onProgress"
>
  <button
    className="button"
    data-label="button"
    disabled={false}
    onClick={[Function]}
  >
    <span>
      <i
        className="fa fa-spin fa-spinner"
      />
      onProgress
    </span>
  </button>
</ProgressableButton>
`;

exports[`ProgressableButton Title is kept on progress if no titleOnProgress is set 1`] = `
<ProgressableButton
  data-label="button"
  inProgress={true}
  onClick={[Function]}
  title="nothing"
>
  <button
    className="button"
    data-label="button"
    onClick={[Function]}
  >
    <span>
      <i
        className="fa fa-spin fa-spinner"
      />
      nothing
    </span>
  </button>
</ProgressableButton>
`;
